syntax = "proto2";

package proto;

message ReadyMsg {
}
