syntax = "proto3";

package proto;

import "Target.proto";

message ReadyRsp {
  int32 gameid = 1;
  repeated Target targets = 2;
}
