syntax = "proto3";

package proto;

message ZConfigMsg {
  double zAxis = 1;
}
